[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vexen_user"]

[project]
name = "vexen-user"
version = "0.1.4"
description = "User system with hexagonal architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "albakore", email = "kevink.contacto@gmail.com" }]
maintainers = [{ name = "albakore", email = "kevink.contacto@gmail.com" }]
keywords = [
	"user",
	"hexagonal-architecture",
	"clean-architecture",
	"async",
	"sqlalchemy",
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Framework :: AsyncIO",
	"Framework :: FastAPI",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Security",
	"Typing :: Typed",
]
dependencies = [
	"sqlalchemy[asyncio]>=2.0.44",
	"asyncpg>=0.29.0",
	"greenlet>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.1", "pytest-asyncio>=0.23.0", "ruff>=0.14.7", "mypy>=1.8.0"]

[project.urls]
Homepage = "https://github.com/vexen-labs/vexen-user"
Documentation = "https://github.com/vexen-labs/vexen-user#readme"
Repository = "https://github.com/vexen-labs/vexen-user"
Issues = "https://github.com/vexen-labs/vexen-user/issues"

[dependency-groups]
dev = ["pytest>=9.0.1", "ruff>=0.14.7"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint]
select = [
	"E",  # pycodestyle errors
	"W",  # pycodestyle warnings
	"F",  # pyflakes
	"I",  # isort
	"N",  # pep8-naming
	"UP", # pyupgrade
	"B",  # flake8-bugbear
	"C4", # flake8-comprehensions
]
ignore = ["W191"]
